--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -1,9 +1,7 @@
 #summary Cosas por ver y hacer
 
- * !GoalBasedAgent hace que no se tenga que sobreescribir el método 'see'. Para el agente lógico, quizá sea interesante que los alumnos tengan que sobreescribirlo.
+ * !GoalBasedAgent hace que no se tenga que sobreescribir el método 'see'. Para el agente lógico, quizá sea interesante que los alumnos tengan que sobreescribirlo. Si se hace así en la parte lógica, debería ser igual en la parte de búsqueda.
 
  * Recrear la jerarquía de agentes. Podría ir un agente !SearchAgent y un !CalculusAgent. Quitar de las clases más abstractas cosas de búsqueda.
 
  * Ver cómo resolver lo del método 'solve' de la clase Solve. El problema son los parámetros que se reciben.
-
- * Ver si se oculta o no el método 'updateState' del agente para los alumnos. En la parte lógica sería bueno que lo tengan que sobreescribir los alumnos, para que se den cuenta de que la Base de Conocimientos se está modificando. Si se hace así en la parte lógica, debería ser igual en la parte de búsqueda.
