--- a/wiki/InstruccionesWindows.wiki
+++ b/wiki/InstruccionesWindows.wiki
@@ -9,11 +9,7 @@ Las pruebas fueron realizadas en Windows XP SP 2, así como en ciertas versiones
 
  * Sistema operativo utilizado: Windows XP SP 2.
  * [http://www.netbeans.org/ NetBeans] 6.1.
+ * [http://miktex.org/ MiKTeX] 2.7 (Si se desea la generación de archivos PDF con los árboles de búsqueda).
+ * TODO: Falta poner acá SWI-Prolog.
 
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+Es muy probable que se puedan utilizar versiones más actualizadas, aunque quizá la guía no contemple por ejemplo cambios en las interfaces gráficas.
