Edited wiki page through web user interface.

--- a/wiki/InstruccionesInstalacion.wiki
+++ b/wiki/InstruccionesInstalacion.wiki
@@ -2,7 +2,7 @@
 
 = Notas =
 
-Las pruebas fueron realizadas en Windows XP SP 2, así como en ciertas versiones de otros programas. Si se encuentran problemas al seguir la guía, por favor dejar un comentario en esta página.
+Las pruebas fueron realizadas en Windows XP SP 2 y Ubuntu Linux 8.04, así como en ciertas versiones de otros programas. Si se encuentran problemas al seguir la guía, por favor dejar un comentario en esta página.
 
 = Software necesario =
 
