--- a/wiki/FaiaConNetbeans.wiki
+++ b/wiki/FaiaConNetbeans.wiki
@@ -1,13 +1,24 @@
-#summary One-sentence summary of this page.
+#summary Instrucciones para utilizar FAIA con Netbeans.
 
-= Introduction =
+== Importar FAIA ==
 
-Add your content here.
+TODO: Agregar la parte de importar el código desde el jar o zip (depende de cómo se lo entreguemos a los alumnos).
 
+== Configurar un proyecto para utilizar _Búsqueda_ ==
 
-= Details =
+TODO.
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+== Configurar un proyecto para utilizar _Prolog_ ==
+
+Se debe utilizar como directorio para librerías a 'faia\lib', donde se encuentran algunas dependencias que es necesario referenciar. Para esto:
+
+ * Hacer click derecho en "Libraries" dentro del proyecto nuevo, y en "Libraries folder" elegir la carpeta 'faia\lib" (utilizar el botón Browse para ubicarla).
+ * Luego hacer click derecho nuevamente en "Libraries" y elegir la opción "Add JAR/Folder".
+ * Elegir el archivo 'jpl.jar'.
+
+Con los pasos anteriores ya tenemos agregado el archivo 'jpl.jar' a nuestro classpath. Con esto ya podemos utilizar Prolog en Windows XP (suponiendo que ya ha sido instalado con los pasos dados en esta página, modificando la variable PATH como se indica). *Sin embargo, para sistemas GNU/Linux, es necesario realizar, además, los siguientes pasos:*
+
+ * Hacer click derecho en el proyecto, y elegir la opción "Properties".
+ * En "Run", dentro de la caja de texto "VM Options" colocar: _-Djava.library.path="/usr/lib/pl-5.6.57/lib/i386-linux"_. Es importante no olvidarse de colocar las comillas dobles para indicar la ruta del directorio, y así evitarse problemas.
+
+Luego de realizar correctamente los pasos anteriores, debería ser posible correr proyectos que utilicen Cálculo Situacional con FAIA. Es recomendable ver los ejemplos incluidos.
