--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -1,16 +1,42 @@
 = ¿Qué es FAIA? =
 FAIA es un framework para el desarrollo de aplicaciones de interés académico que utilizan técnicas de Inteligencia Artificial (IA). El objetivo del mismo es permitir que el alumno pueda enfocarse en modelar y resolver el problema desde el punto de vista de la IA facilitando el proceso de implementación de la aplicación. Para lograr esto FAIA dispone de un conjunto de clases y algoritmos que deben ser utilizados y/o extendidos por el alumno. Se puede encontrar información más detallada en el paper FAIA: Framework para la enseñanza de agentes en IA, que se encuentra en la [http://www.frsf.utn.edu.ar/matero/visitante/index.php?id_catedra=142 página de la cátedra] en la sección "Repositorio".
 
+
 = ¿Cómo puedo obtener FAIA? =
+La página principal del proyecto es esta: http://code.google.com/p/faia/
+En la sección de [http://code.google.com/p/faia/downloads/list Downloads] se pueden bajar las últimas versiones estables y el software relacionado. También se puede acceder a la versión en desarrollo en el [http://code.google.com/p/faia/source/checkout repositorio Subversion].
+
 
 = ¿Cómo importar FAIA en Eclipse o Netbeans? =
+En la [http://code.google.com/p/faia/w/list wiki] se pueden encontrar documentos que explican como importar FAIA y utilizarlo, tanto para [http://code.google.com/p/faia/wiki/FaiaConEclipse Eclipse] como para [http://code.google.com/p/faia/wiki/FaiaConNetbeans Netbeans].
 
 = ¿Hay algún ejemplo disponible que me permita ver cómo utilizar FAIA? =
+Si, hay ejemplos disponibles en los releases en la página de Downloads o accediendo al código disponible en el repositorio Subversion (aunque es recomendable utilizar las versiones estables). Hay ejemplos que demuestran la funcionalidad de FAIA en los enfoques de Búsqueda y Calculo Situacional.
 
-= ¿Qué contiene el ejemplo? =
+El de '''Búsqueda''' es una versión simplificada del juego "Pacman". El enunciado del ejemplo lo pueden encontrar en la sección "Trabajos prácticos" de la cátedra de [http://www.frsf.utn.edu.ar/matero/visitante/index.php?id_catedra=142&ver=12 Inteligencia Artificial]. Para correr y probar los ejemplos, es necesario seguir una serie de pasos detallados en la wiki. Hay instrucciones tanto para Eclipse como para Netbeans.
+
+_TODO:_ Falta el ejemplo de Cálculo Situacional.
+
+
+= ¿Qué contienen los ejemplos? =
+El ejemplo de Búsqueda contiene la solución al problema del “Pacman”. Esta compuesta por:
+
+ * Operadores: Comer.java, IrAbajo.java, IrArriba.java, IrDerecha.java, IrIzquierda.java, Pelear.java.
+ * Agente: AgentePacman.java, EstadoPacman.java
+ * Ambiente: AmbientePacman.java, EstadoAmbiente.java
+ * Meta: MetaPacman.java
+ * Clase principal (Main): Pacman.java
+
+_TODO:_ Falta el ejemplo de Cálculo Situacional.
+
 
 = ¿Cómo se ejecuta el ejemplo? =
+Las instrucciones están en la wiki, tanto para Eclipse como para Netbeans.
+
 
 = ¿Cómo debo configurar Eclipse o Netbeans para que mi proyecto utilice FAIA? =
+Las instrucciones están en la wiki, tanto para Eclipse como para Netbeans.
+
 
 = ¿Cómo puedo exportar mi proyecto para utilizarlo en el Java Lab? =
+_TODO:_ Indicar las instrucciones tanto para Eclipse (ya están en la FAQ versión PDF) como para Netbeans.
