--- a/wiki/FaiaConNetbeans.wiki
+++ b/wiki/FaiaConNetbeans.wiki
@@ -6,9 +6,10 @@
 == Importar FAIA ==
 || *1.* Ir al menú _File -> Open Project..._ ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/importarFaia1.png ||
-|| *2.* Dirigirse a la carpeta donde se han descomprimido FAIA y los ejemplos. Manteniendo presionada la tecla _Control_, elegir todos los proyectos y presionar en _Open Project_ ||
+|| *2.* Dirigirse a la carpeta donde se han descomprimido FAIA y los ejemplos. Manteniendo presionada la tecla _Control_, es posible abrir únicamente el proyecto 'faia' o éste junto con todos los ejemplos. Finalmente presionar la tecla _Open Project_. ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/importarFaia2.png ||
-|| *3.*  ||
+|| *3.* Finalmente, es posible recorrer los distintos paquetes y el código fuente de los proyectos importados.  ||
+|| http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/importarFaia3.png ||
 
 == Configurar un proyecto para utilizar _Búsqueda_ ==
 
