--- a/wiki/FaiaConEclipse.wiki
+++ b/wiki/FaiaConEclipse.wiki
@@ -7,8 +7,16 @@
 
 || *1.* Ir al menú _File -> Import..._ ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConEclipse/importarFaia1.png ||
-|| *2.* Elegir la opción _Existing Project into Workspace_ ubicada dentro de _General_. Luego presionar _Next_. ||
+|| *2.* Elegir la opción _Existing Projects into Workspace_ ubicada dentro de _General_. Luego presionar _Next_. ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConEclipse/importarFaia2.png ||
+|| *3.* ||
+|| http://faia.googlecode.com/svn/wiki/images/faiaConEclipse/importarFaia3.png ||
+|| *4.* ||
+|| http://faia.googlecode.com/svn/wiki/images/faiaConEclipse/importarFaia4.png ||
+|| *5.* ||
+|| http://faia.googlecode.com/svn/wiki/images/faiaConEclipse/importarFaia5.png ||
+|| *6.* ||
+|| http://faia.googlecode.com/svn/wiki/images/faiaConEclipse/importarFaia6.png ||
 
 == Configurar un proyecto para utilizar _Búsqueda_ ==
 
