--- a/wiki/FaiaConEclipse.wiki
+++ b/wiki/FaiaConEclipse.wiki
@@ -5,6 +5,8 @@
 
 == Importar FAIA ==
 
+_NOTA:_ Es importante, antes de continuar, haber leído la sección "Instalar FAIA" de la [http://code.google.com/p/faia/wiki/InstruccionesInstalacion página de instrucciones de instalación].
+
 || *1.* Ir al menú _File -> Import..._ ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConEclipse/importarFaia1.png ||
 || *2.* Elegir la opción _Existing Projects into Workspace_ ubicada dentro de _General_. Luego presionar _Next_. ||
