--- a/wiki/FaiaConEclipse.wiki
+++ b/wiki/FaiaConEclipse.wiki
@@ -22,7 +22,9 @@ _NOTA:_ Es importante, antes de continuar, haber leído la sección "Instalar FA
 
 == Configurar un proyecto para que utilice FAIA ==
 
-|| *1.* Primero es necesario haber importado FAIA con las instrucciones anteriores. Luego creamos un nuevo proyecto yendo a ||
+_NOTA:_ Antes de seguir estos pasos es necesario haber importado FAIA.
+
+|| *1.* ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConEclipse/configurarProyecto1.png ||
 
 == Configurar un proyecto para utilizar _Búsqueda_ ==
