Edited wiki page through web user interface.

--- a/wiki/FaiaConNetbeans.wiki
+++ b/wiki/FaiaConNetbeans.wiki
@@ -16,7 +16,9 @@ _NOTA:_ Es importante, antes de continuar, haber leído la sección "Instalar FA
 
 == Configurar un proyecto para que utilice FAIA ==
 
-_NOTA:_ Antes de seguir estos pasos es necesario haber importado FAIA.
+_NOTAS:_
+ * Antes de seguir estos pasos es necesario haber importado FAIA.
+ * Estos son pasos básicos para agregar una referencia a nuestro proyecto para utilizar FAIA. Más abajo se dan pasos detallados para poder utilizar Búsqueda y Cálculo Situacional.
 
 || *1.* Creamos un nuevo proyecto yendo a _File -> New Project_.  ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/configurarProyecto1.png ||
@@ -28,7 +30,7 @@ _NOTA:_ Antes de seguir estos pasos es necesario haber importado FAIA.
 || http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/configurarProyecto4.png ||
 || *5.* Buscamos la carpeta donde tenemos el proyecto FAIA, lo seleccionamos y presionamos _Add Project JAR Files_. ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/configurarProyecto5.png ||
-|| *6.* Finalmente ya podemos comenzar a utilizar FAIA en nuestro proyecto. *Una aclaración importante*: estos son pasos básicos para agregar una referencia a nuestro proyecto para utilizar FAIA. Más abajo se dan pasos detallados para poder utilizar Búsqueda y Cálculo Situacional. ||
+|| *6.* Finalmente ya podemos comenzar a utilizar FAIA en nuestro proyecto. ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/configurarProyecto6.png ||
 
 == Configurar un proyecto para utilizar _Búsqueda_ ==
