--- a/wiki/FaiaConEclipse.wiki
+++ b/wiki/FaiaConEclipse.wiki
@@ -19,7 +19,7 @@ _NOTA:_ Es importante, antes de continuar, haber leído la sección "Instalar FA
 || http://faia.googlecode.com/svn/wiki/images/faiaConEclipse/importarFaia5.png ||
 || *6.* El proyecto ha sido importado. Ahora es necesario *cambiar la codificación de caracteres* de _faia_. Hacemos click derecho en el proyecto y elegimos _Properties_. ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConEclipse/importarFaia6.png ||
-|| *7.* En la sección _Resource_ dentro del marco _Text file encoding_ activamos la opción _Other, y de la lista desplegable elegimos la opción _UTF-8_. Presionamos el botón _Apply_ y luego _OK_. ||
+|| *7.* En la sección _Resource_ dentro del marco _Text file encoding_ activamos la opción _Other_, y de la lista desplegable elegimos la opción _UTF-8_. Presionamos el botón _Apply_ y luego _OK_. ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConEclipse/importarFaia7.png ||
 
 == Configurar un proyecto para que utilice FAIA ==
