--- a/wiki/FaiaConNetbeans.wiki
+++ b/wiki/FaiaConNetbeans.wiki
@@ -5,7 +5,9 @@
 
 == Importar FAIA ==
 
-_NOTA:_ Es importante, antes de continuar, haber leído la sección "Instalar FAIA" de la [http://code.google.com/p/faia/wiki/InstruccionesInstalacion página de instrucciones de instalación].
+_NOTAS:_
+ * Es importante, antes de continuar, haber leído la sección "Instalar FAIA" de la [http://code.google.com/p/faia/wiki/InstruccionesInstalacion página de instrucciones de instalación].
+ * Estas instrucciones de importación de FAIA se aplican para los ejemplos, ya que los pasos son muy similares. Se pone especial énfasis en configurar correctamente la codificación de caracteres, como se indica uno de los pasos.
 
 || *1.* Ir al menú _File -> Open Project..._ ||
 || http://faia.googlecode.com/svn/wiki/images/faiaConNetBeans/importarFaia1.png ||
@@ -35,7 +37,9 @@ _NOTAS:_
 
 == Configurar un proyecto para utilizar _Búsqueda_ ==
 
-TODO.
+Para comenzar a utilizar estrategias de Búsqueda simplemente se deben especializar las clases que correspondan. Para aprender cómo hacerlo, es bueno observar los ejemplos incluídos.
+
+Vale aclarar aquí una cuestión. Cuando se corre un proyecto que utiliza alguna estrategia de Búsqueda con FAIA, es posible indicarle al framework que genere cierto tipo de salidas sobre la corrida, para poder observar luego el funcionamiento interno del agente, esto es, el árbol de búsqueda.
 
 == Configurar un proyecto para utilizar _Prolog_ ==
 
